# kimg

./: .gitignore  BRUSH_PLAN.md  CONTRIBUTING.md  Cargo.toml  LAYERS_PLAN.md  LICENSE  PLAN.md  PRD.md  README.md  ROADMAP.md  SVG_PLAN.md  deny.toml  package-lock.json  package.json  tsconfig.json
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml
crates/kimg-core/: Cargo.toml
crates/kimg-core/benches/: blend.rs  brush.rs  codec.rs  convolution.rs  document.rs  fill.rs  filter.rs  shape.rs  sprite.rs  transform.rs
crates/kimg-core/fuzz/: Cargo.toml
crates/kimg-core/fuzz/fuzz_targets/: decode_auto.rs  decode_gif.rs  decode_jpeg.rs  decode_png.rs  decode_webp.rs  deserialize.rs  import_psd.rs
crates/kimg-core/src/: blend.rs  blit.rs  brush.rs  buffer.rs  codec.rs  color.rs  convolution.rs  document.rs  fill.rs  filter.rs  layer.rs  lib.rs  pixel.rs  serialize.rs  shape.rs  sprite.rs  svg.rs  text.rs  transform.rs
crates/kimg-wasm/: Cargo.toml
crates/kimg-wasm/src/: lib.rs
demo/: demo.css  demo.js  index.html  vite.config.js
demo/src/: App.svelte  constants.js  global.css  main.js
demo/src/helpers/: canvas.js  context.js  verifier.js  views.js
demo/src/lib/: CanvasView.svelte  CodeView.svelte  DiagnosticsPanel.svelte  Lightbox.svelte  MessageView.svelte  Sidebar.svelte  SwatchView.svelte  TestCard.svelte  TestSection.svelte
demo/src/stores/: suite.svelte.js
demo/src/tests/: brushStrokes.js  colorUtils.js  experimental.js  filters.js  index.js  io.js  layers.js  setup.js  shapes.js  text.js  transforms.js
demo/src/tests/volume/: index.js  rasterBlends.js  rasterFilters.js  rasterTransforms.js  shared.js  svgOverlayMatrix.js
js/: README.md  base64.d.ts  base64.js  base64.ts  color-utils.d.ts  color-utils.js  color-utils.ts  index.d.ts  index.js  index.ts  kimg_wasm.d.ts  kimg_wasm.js  kimg_wasm.ts  package.json  raw.d.ts  raw.js
scripts/: build.sh  demo-smoke.mjs  demo-smoke.sh  demo.sh  generate-hero.mjs  pack-smoke.sh
tests/: package.test.ts  subpaths.test.ts
