[package]
name = "kimg-core"
version = "0.1.0"
edition = "2021"
description = "Pure Rust pixel engine for layer-based image compositing"
license = "MIT"
repository = "https://github.com/iamkaf/kimg"
homepage = "https://github.com/iamkaf/kimg"
keywords = ["image", "compositor", "pixel", "layer", "blend"]
categories = ["multimedia::images", "graphics", "wasm"]

[features]
default = []
cosmic-text-backend = ["dep:cosmic-text", "dep:fontdb", "dep:wuff"]
svg-backend = ["dep:fontdb", "dep:resvg", "dep:roxmltree", "dep:usvg", "dep:wuff"]
tiny-skia-shapes = ["dep:tiny-skia"]
quantette-quantize = ["dep:quantette"]

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
cosmic-text = { version = "0.15.0", default-features = false, features = ["std", "swash", "wasm-web"], optional = true }
fast_image_resize = { version = "6.0.0", default-features = false, features = ["std", "only_u8x4"] }
fontdb = { version = "0.23.0", optional = true }
font8x8 = { version = "0.3.1", default-features = false, features = ["unicode"] }
png = "0.17"
jpeg-decoder = "0.3"
jpeg-encoder = "0.6"
image-webp = "0.2"
gif = "0.13"
ink-stroke-modeler-rs = "0.1.0"
psd = "0.3"
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
resvg = { version = "0.47.0", default-features = false, features = ["text"], optional = true }
roxmltree = { version = "0.21.1", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
tiny-skia = { version = "0.12.0", default-features = false, features = ["std", "simd"], optional = true }
quantette = { version = "0.5.1", default-features = false, features = ["std"], optional = true }
usvg = { version = "0.47.0", default-features = false, features = ["text"], optional = true }
wuff = { version = "0.2.3", default-features = false, features = ["brotli", "z"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "blend"
harness = false

[[bench]]
name = "transform"
harness = false

[[bench]]
name = "convolution"
harness = false

[[bench]]
name = "filter"
harness = false

[[bench]]
name = "document"
harness = false

[[bench]]
name = "codec"
harness = false

[[bench]]
name = "sprite"
harness = false

[[bench]]
name = "fill"
harness = false

[[bench]]
name = "shape"
harness = false

[[bench]]
name = "brush"
harness = false
