[package]
name = "kimg-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for kimg image compositing engine"
license = "MIT"
repository = "https://github.com/iamkaf/kimg"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
kimg-core = { path = "../kimg-core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
