[package]
name = "kimg-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for kimg image compositing engine"
license = "MIT"
repository = "https://github.com/iamkaf/kimg"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
tiny-skia-shapes = ["kimg-core/tiny-skia-shapes"]

[dependencies]
kimg-core = { path = "../kimg-core", version = "0.1.0" }
wasm-bindgen = "0.2"
js-sys = "0.3"
