[package]
name = "kimg-core-fuzz"
version = "0.0.1"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
kimg-core = { path = ".." }

[[bin]]
name = "decode_png"
path = "fuzz_targets/decode_png.rs"
test = false
doc = false

[[bin]]
name = "decode_jpeg"
path = "fuzz_targets/decode_jpeg.rs"
test = false
doc = false

[[bin]]
name = "decode_webp"
path = "fuzz_targets/decode_webp.rs"
test = false
doc = false

[[bin]]
name = "decode_gif"
path = "fuzz_targets/decode_gif.rs"
test = false
doc = false

[[bin]]
name = "import_psd"
path = "fuzz_targets/import_psd.rs"
test = false
doc = false

[[bin]]
name = "decode_auto"
path = "fuzz_targets/decode_auto.rs"
test = false
doc = false

[[bin]]
name = "deserialize"
path = "fuzz_targets/deserialize.rs"
test = false
doc = false

[workspace]
members = ["."]
